feat(opa): Rename deny to violation

--- a/templates/k8sbannedimagetags_template.yaml
+++ b/templates/k8sbannedimagetags_template.yaml
@@ -22,7 +22,7 @@ spec:
     - target: admission.k8s.gatekeeper.sh
       rego: |
         package k8sbannedimagetags
-        deny[{"msg": msg}] {
+        violation[{"msg": msg}] {
           container := input.review.object.spec.containers[_]
           img_split := split(container.image, ":")
           tag := img_split[count(img_split) - 1]
