feat(hashicorp): Add new repo location

--- a/allowedrepos/constraint.yaml
+++ b/allowedrepos/constraint.yaml
@@ -48,6 +48,9 @@ spec:
       - 'quay.io/open-policy-agent/'
       - 'openpolicyagent/opa'
 
+      # Hashicorp
+      - 'hashicorp/'
+
       # Pachyderm
       - 'pachyderm/'
 
