feat(policy): Add more whitelisted repos

--- a/allowedrepos/constraint.yaml
+++ b/allowedrepos/constraint.yaml
@@ -61,6 +61,10 @@ spec:
       # Velero
       - 'gcr.io/heptio-images/'
 
+      # Kubecost
+      - 'gcr.io/kubecost1/'
+      - 'jimmidyson/configmap-reload:'
+
       # Kubeflow
       - 'argoproj/'
       - 'seldonio/'
