--- a/allowedrepos/constraint.yaml
+++ b/allowedrepos/constraint.yaml
@@ -22,6 +22,7 @@ spec:
       - 'library/python'
       - 'sha256:'
       - 'library/sha256'
+      - 'busybox'
       - 'busybox:'
       - 'library/busybox'
 
