--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,10 @@ jobs:
       with:
         kubeconfig: ${{ secrets.KUBECONFIG }}
         args: apply -f allowedrepos/template.yaml -f allowedrepos/constraint.yaml
+
+    # Apply manifests for uniqueingresshost
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f uniqueingresshost/template.yaml -f uniqueingresshost/constraint.yaml
