fix(ci): Add sleep after applying the constraint template

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,25 @@ jobs:
       uses: statcan/actions/kubectl@master
       with:
         kubeconfig: ${{ secrets.KUBECONFIG }}
-        args: apply -f allowedrepos/template.yaml -f allowedrepos/constraint.yaml
+        args: apply -f allowedrepos/template.yaml
+
+    # Wait 5 seconds for the constraint template to apply
+    - run: |
+        sleep 5
+
+    # Apply manifests for allowedrepos
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f allowedrepos/constraint.yaml
+
+    # Apply manifests for uniqueingresshost
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f uniqueingresshost/template.yaml
 
     # Wait 5 seconds for the constraint template to apply
     - run: |
@@ -42,4 +60,4 @@ jobs:
       uses: statcan/actions/kubectl@master
       with:
         kubeconfig: ${{ secrets.KUBECONFIG }}
-        args: apply -f uniqueingresshost/template.yaml -f uniqueingresshost/constraint.yaml
+        args: apply -f uniqueingresshost/constraint.yaml
