feat(action): Additional rule to kubectl action

--- a/allowedrepos/constraint.yaml
+++ b/allowedrepos/constraint.yaml
@@ -107,6 +107,9 @@ spec:
       - 'mcr.microsoft.com/'
       - 'nvidia/'
 
+      # Velero
+      - 'velero'
+
       # Utilities
       - 'zachomedia/minio'
       - 'zachomedia/etcd'
