--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,17 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
+    # Run the Deployment fo GateKeeper
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f deploy/gatekeeper.yaml
+
+    # Wait 5 seconds for the constraint template to apply
+    - run: |
+        sleep 5
+
     # Apply manifests for allowedrepos
     - name: kubectl
       uses: statcan/actions/kubectl@master
