--- a/general/container-allowed-images/template.yaml
+++ b/general/container-allowed-images/template.yaml
@@ -1,12 +1,12 @@
 apiVersion: templates.gatekeeper.sh/v1beta1
 kind: ConstraintTemplate
 metadata:
-  name: allowedrepositories
+  name: containerallowedimages
 spec:
   crd:
     spec:
       names:
-        kind: AllowedRepositories
+        kind: ContainerAllowedImages
       validation:
         # Schema for the `parameters` field
         openAPIV3Schema:
@@ -18,7 +18,7 @@ spec:
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
-        package allowedrepositories
+        package containerallowedimages
 
         violation[{"msg": msg}] {
           container := input.review.object.spec.containers[_]
