feat(arch): Refactor

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,9 @@ jobs:
     - run: |
         sleep 5
 
-    ############
-    # KUSTOMIZE
-    ############
+    #######################
+    # CONSTRAINTS TEMPLATES
+    #######################
 
     # Apply all of the contraint templates
     - name: kustomize
