feat(opa): Add ignored container repo

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -49,6 +49,9 @@ spec:
       - 'quay.io/open-policy-agent/'
       - 'openpolicyagent/opa'
 
+      # Fluentd
+      - 'jvassev/kube-fluentd-operator'
+
       # Hashicorp
       - 'vault:'
       - 'hashicorp/'
