--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,3 +80,10 @@ jobs:
       with:
         kubeconfig: ${{ secrets.KUBECONFIG }}
         args: apply -f general/loadbalancer-no-public-ips/constraint.yaml
+
+    # Apply constraint for forbidden-sysctls
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f pod-security-policy/forbidden-sysctls/constraint.yaml
