--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,6 +81,13 @@ jobs:
         kubeconfig: ${{ secrets.KUBECONFIG }}
         args: apply -f general/loadbalancer-no-public-ips/constraint.yaml
 
+    # Apply constraint for flexvolume-drivers
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f pod-security-policy/flexvolume-drivers/constraint.yaml
+
     # Apply constraint for forbidden-sysctls
     - name: kubectl
       uses: statcan/actions/kubectl@master
