--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,3 +94,10 @@ jobs:
       with:
         kubeconfig: ${{ secrets.KUBECONFIG }}
         args: apply -f pod-security-policy/forbidden-sysctls/constraint.yaml
+
+    # Apply constraint for host-namespaces
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f pod-security-policy/host-namespaces/constraint.yaml
