feat(opa): Add psp for host namespaces

--- a/pod-security-policy/host-namespaces/constraint.yaml
+++ b/pod-security-policy/host-namespaces/constraint.yaml
@@ -4,7 +4,7 @@ metadata:
   name: psp-host-namespace
 spec:
   match:
-    excludedNamespaces: ["kube-system"]
+    excludedNamespaces: ["kubecost", "kube-system", "monitoring"]
     kinds:
       - apiGroups: [""]
         kinds: ["Pod"]
