--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,3 +101,10 @@ jobs:
       with:
         kubeconfig: ${{ secrets.KUBECONFIG }}
         args: apply -f pod-security-policy/host-namespaces/constraint.yaml
+
+    # Apply constraint for proc-mount
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f pod-security-policy/proc-mount/constraint.yaml
