--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,3 +108,10 @@ jobs:
       with:
         kubeconfig: ${{ secrets.KUBECONFIG }}
         args: apply -f pod-security-policy/proc-mount/constraint.yaml
+
+    # Apply constraint for seccomp
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f pod-security-policy/seccomp/constraint.yaml
