--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,3 +115,10 @@ jobs:
       with:
         kubeconfig: ${{ secrets.KUBECONFIG }}
         args: apply -f pod-security-policy/proc-mount/constraint.yaml
+
+    # Apply constraint for traffic-policy
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f service-mesh/traffic-policy/constraint.yaml
