--- a/service-mesh/kustomization.yaml
+++ b/service-mesh/kustomization.yaml
@@ -22,4 +22,5 @@ kind: Kustomization
 # etc. that differ from the common base).
 bases:
   - peer-authentication
+  - port-naming
   - traffic-policy
