feat(statcan): Custom rules

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -10,8 +10,47 @@ spec:
   parameters:
     repos:
       # StatCan Repository
+      - 'artifactory.cloud.statcan.ca/'
       - 'k8scc01covidacr.azurecr.io/'
       - 'statcan/'
+
+      # TMP
+      - 'bitnami/kubectl'
+      - 'sylus/gitlab-ci'
+      - 'docker:'
+      - 'certbot/'
+      - 'aquasec/'
+      - 'cachethq/docker:'
+      - 'docker.io/postgres:'
+      - 'bitnami/redis:'
+      - 'redis:'
+      - 'microsoft/mssql-server-linux:'
+      - 'postgres:'
+      - 'docker.io/bitnami/redis:'
+      - 'fluentd:'
+      - 'containous/whoami'
+      - 'docker.bintray.io/bitnami/postgresql:'
+      - 'docker.bintray.io/jfrog/'
+      - 'notary:'
+      - 'solr:'
+      - 'docker.io/bitnami/pgpool:'
+      - 'bitnami/kubectl:'
+      - 'zookeeper:'
+      - 'govcloud/'
+      - 'jupyter/'
+      - 'jupyterhub/'
+      - 'quay.io/awesomenix/drainsafe-manager'
+      - 'gcr.io/google_samples/k8szk:v3'
+      - 'appropriate/curl'
+      - 'atlassian/'
+      - 'drupalwxt/'
+      - 'gitlab/'
+      - 'lucidworks/'
+      - 'hairyhenderson/'
+      - 'notary/'
+      - 'sqlpad/'
+      - 'k8s.gcr.io/'
+      - 'nginx'
 
       # Base containers
       - 'alpine:'
