feat(statcan): Custom rules

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -17,6 +17,7 @@ spec:
       # TMP
       - 'bitnami/kubectl'
       - 'sylus/gitlab-ci'
+      - 'python'
       - 'docker:'
       - 'certbot/'
       - 'aquasec/'
