--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,6 +67,13 @@ jobs:
         kubeconfig: ${{ secrets.KUBECONFIG }}
         args: apply -f general/container-allowed-images/constraint.yaml
 
+    # Apply constraint for container-limits
+    - name: kubectl
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f general/container-limits/constraint.yaml
+
     # Apply constraint for ingress-hostnames-conflict
     - name: kubectl
       uses: statcan/actions/kubectl@master
