--- a/pod-security-policy/kustomization.yaml
+++ b/pod-security-policy/kustomization.yaml
@@ -26,5 +26,6 @@ bases:
   - forbidden-sysctls
   - host-namespaces
   - host-network-ports
+  - privileged-containers
   - proc-mount
   - read-only-root-filesystem
