--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,6 +109,13 @@ jobs:
         kubeconfig: ${{ secrets.KUBECONFIG }}
         args: apply -f pod-security-policy/forbidden-sysctls/constraint.yaml
 
+    # Apply constraint for fsgroup
+    - name: constraint for fsgroup
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f pod-security-policy/fsgroup/constraint.yaml
+
     # Apply constraint for host-namespaces
     - name: constraint for host-namespaces
       uses: statcan/actions/kubectl@master
