feat(opa): Add psp for apparmor and selinux

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,6 +95,13 @@ jobs:
         kubeconfig: ${{ secrets.KUBECONFIG }}
         args: apply -f pod-security-policy/allow-privilege-escalation/constraint.yaml
 
+    # Apply constraint for apparmor
+    - name: constraint for apparmor
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f pod-security-policy/apparmor/constraint.yaml
+
     # Apply constraint for capabilities
     - name: constraint for capabilities
       uses: statcan/actions/kubectl@master
@@ -171,6 +178,13 @@ jobs:
     #   with:
     #     kubeconfig: ${{ secrets.KUBECONFIG }}
     #     args: apply -f pod-security-policy/seccomp/constraint.yaml
+
+    # Apply constraint for selinux
+    # - name: constraint for selinux
+    #   uses: statcan/actions/kubectl@master
+    #   with:
+    #     kubeconfig: ${{ secrets.KUBECONFIG }}
+    #     args: apply -f pod-security-policy/selinux/constraint.yaml
 
     # Apply constraint for users
     - name: constraint for users
