--- a/pod-security-policy/kustomization.yaml
+++ b/pod-security-policy/kustomization.yaml
@@ -22,6 +22,7 @@ kind: Kustomization
 # etc. that differ from the common base).
 bases:
   - allow-privilege-escalation
+  - apparmor
   - capabilities
   - flexvolume-drivers
   - forbidden-sysctls
@@ -32,5 +33,7 @@ bases:
   - privileged-containers
   - proc-mount
   - read-only-root-filesystem
+  # - seccomp
+  # - selinux
   - users
   - volume
