--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -187,11 +187,11 @@ jobs:
     #     args: apply -f pod-security-policy/selinux/constraint.yaml
 
     # Apply constraint for users
-    - name: constraint for users
-      uses: statcan/actions/kubectl@master
-      with:
-        kubeconfig: ${{ secrets.KUBECONFIG }}
-        args: apply -f pod-security-policy/users/constraint.yaml
+    # - name: constraint for users
+    #   uses: statcan/actions/kubectl@master
+    #   with:
+    #     kubeconfig: ${{ secrets.KUBECONFIG }}
+    #     args: apply -f pod-security-policy/users/constraint.yaml
 
     # Apply constraint for volume
     - name: constraint for volume
